<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingTop="10dp"
    android:paddingRight="40dp"
    android:paddingLeft="40dp"
    tools:context=".ui.RegistrationActivity">

    <TextView
        android:layout_width="350dp"
        android:layout_height="180dp"
        app:layout_constraintLeft_toLeftOf="@id/constraint_layout"
        app:layout_constraintRight_toRightOf="@id/constraint_layout"
        app:layout_constraintBottom_toTopOf="@id/layout_username"
        android:id="@+id/tv_appIcon"
        android:text="@string/game_name"
        android:textSize="34sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:paddingTop="85dp"/>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_username_24"
        android:id="@+id/layout_username"
        app:startIconTint="@color/black"
        android:layout_marginTop="40dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_appIcon">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_email_24"
        android:id="@+id/layout_email"
        app:startIconTint="@color/black"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_username">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/ic_lock_24"
        android:id="@+id/layout_pass"
        app:startIconTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_email"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:onClick="btnRegisterEvent"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>